--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,14 @@ dependencies:
   reactive_forms: ^13.0.0
   reactive_color_picker: ^0.3.0
   reactive_image_picker: ^0.10.0
+  easy_mask: 
+    git:
+      url: https://github.com/danilocoppi/flutter-textfield-mask
   
   flutter_localizations: # add this line
     sdk: flutter 
   intl: ^0.17.0   
+  mask_text_input_formatter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
