--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_localizations: # add this line
     sdk: flutter 
   intl: ^0.17.0   
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
