--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  loggerx: ^1.3.5
   flutterd: 
     path: ../flutterd
     # git:
@@ -21,7 +20,8 @@ dependencies:
   flutterd_logging_wrapper: 
     # path: ../flutterd_logging_wrapper
     git:
-      url: https://github.com/thzero/flutterd_logging_wrapper
+      url: https://github.com/thzero/flutterd_logging_wrapper 
+  equatable: ^2.0.5
   path_provider: ^2.0.11
   sprintf: ^7.0.0
   bloc: ^8.1.0
@@ -36,8 +36,7 @@ dependencies:
   
   flutter_localizations: # add this line
     sdk: flutter 
-  intl: ^0.17.0   
-  equatable: ^2.0.5
+  intl: ^0.17.0 # flutter_localizations requires 0.17 still
 
 dev_dependencies:
   flutter_test:
