--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,9 @@ dependencies:
   sprintf: ^7.0.0
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
-  flutter_i18n: ^0.32.4
+  # flutter_i18n: ^0.32.5
+  flutter_i18n:
+    path: ../flutter_i18n
   reactive_forms: ^14.1.0
   reactive_color_picker: ^0.4.0
   reactive_image_picker: ^0.12.0
@@ -36,7 +38,7 @@ dependencies:
   
   flutter_localizations: # add this line
     sdk: flutter 
-  intl: ^0.17.0 # flutter_localizations requires 0.17 still
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
