--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ version: 0.0.1
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=2.18.0 <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
@@ -26,12 +26,10 @@ dependencies:
   sprintf: ^7.0.0
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
-  # flutter_i18n: ^0.32.5
-  flutter_i18n:
-    path: ../flutter_i18n
+  flutter_i18n: ^0.33.0
   reactive_forms: ^14.1.0
-  reactive_color_picker: ^0.4.0
-  reactive_image_picker: ^0.12.0
+  reactive_color_picker: ^0.5.0
+  reactive_image_picker: ^2.0.0
   easy_mask: 
     git:
       url: https://github.com/danilocoppi/flutter-textfield-mask
@@ -43,7 +41,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.3.2
+  build_runner: ^2.4.4
 
   flutter_lints: ^2.0.0
 
